# servant-opaleye-realworld-example-app

./: README.md  servant-opaleye-realworld-example-app.cabal  shell.nix
src/: Main.hs
src/Articles/: Database.hs
src/Articles/Database/: Article.hs  DecoratedArticle.hs  Favorite.hs  Tag.hs
src/Users/: Database.hs
